--- a/docs/upgrade-notes.asciidoc
+++ b/docs/upgrade-notes.asciidoc
@@ -8,8 +8,42 @@ NOTE: For the Elastic Security solution release information, refer to {security-
 [float]
 === Breaking changes
 
+[float]
+==== Kibana platform
+
+// Alerting
 [discrete]
-.Added rate limiting to install by upload endpoint. (8.15)
+[[breaking-170635]]
+.\[Alerting\] A new sub-feature privilege to control user access to the cases settings. (8.12)
+[%collapsible]
+====
+*Details* +
+Roles with at least a sub-feature privilege configured will not have access to the cases setting like they had previously. All roles without a sub-feature privilege configured will not be affected. For more information, refer to ({kibana-pull}170635[#170635]).
+====
+
+// ESQL
+[discrete]
+[[breaking-182074]]
+.\[ES|QL\] Renamed an advanced setting to enable {esql}. (8.14)
+[%collapsible]
+====
+*Details* +
+The advanced setting which hides {esql} from the UI has been renamed from `discover:enableESQL` to `enableESQL`. It is enabled by default and must be switched off to disable {esql} features from your {kib} applications. For more information, refer to ({kibana-pull}182074[#182074]).
+====
+
+[discrete]
+[[breaking-174674]]
+.[ES|QL\] Removed `is_nan`, `is_finite`, and `is_infinite` functions from {esql}. (8.13)
+[%collapsible]
+====
+*Details* +
+These functions have been removed from {esql} queries as they are not supported. Errors would be thrown when trying to use them. For more information, refer to ({kibana-pull}174674[#174674]).
+====
+
+// Fleet
+[discrete]
+[[breaking-184036]]
+.\[Fleet\] Added rate limiting to install by upload endpoint. (8.15)
 [%collapsible]
 ====
 *Details* +
@@ -22,15 +56,8 @@ This change could potentially break automations for users that rely on frequent 
 ====
 
 [discrete]
-.Renamed an advanced setting to enable {esql}. (8.14)
-[%collapsible]
-====
-*Details* +
-The advanced setting which hides {esql} from the UI has been renamed from `discover:enableESQL` to `enableESQL`. It is enabled by default and must be switched off to disable {esql} features from your {kib} applications. For more information, refer to ({kibana-pull}182074[#182074]).
-====
-
-[discrete]
-.Removed conditional topics for Kafka outputs. (8.13)
+[[breaking-176879]]
+.\[Fleet\]Removed conditional topics for Kafka outputs. (8.13)
 [%collapsible]
 ====
 *Details* +
@@ -38,7 +65,8 @@ The Kafka output no longer supports conditional topics. For more information, re
 ====
 
 [discrete]
-.Most Fleet installed integrations are now read-only and labelled with a *Managed* tag in the Kibana UI. (8.13)
+[[breaking-176443]]
+.\[Fleet\]Most Fleet installed integrations are now read-only and labelled with a *Managed* tag in the Kibana UI. (8.13)
 [%collapsible]
 ====
 *Details* +
@@ -53,15 +81,20 @@ For more information, refer to ({kibana-pull}172393[#172393]).
 ====
 
 [discrete]
-.Removed `is_nan`, `is_finite`, and `is_infinite` functions from {esql}. (8.13)
+[[breaking-167085]]
+.\[Fleet\] Improved config output validation for default output. (8.11)
 [%collapsible]
 ====
 *Details* +
-These functions have been removed from {esql} queries as they are not supported. Errors would be thrown when trying to use them. For more information, refer to ({kibana-pull}174674[#174674]).
+Improve config output validation to not allow to defining multiple default outputs in {kib} configuration. For more information, refer to ({kibana-pull}167085[#167085]).
 ====
 
+[float]
+==== Elastic Observability solution
+
 [discrete]
-.New SLO architecture. (8.12)
+[[breaking-172224]]
+.\[SLOs\]New SLO architecture. (8.12)
 [%collapsible]
 ====
 *Details* +
@@ -83,29 +116,30 @@ The previous summary transforms summarizing every SLOs won't be used anymore and
 Be aware that when installing a new SLO (or after resetting an SLO), we install two transforms (one for the rollup data and one that summarize the rollup data). Do not delete the new `slo-summary-{slo_id}-{slo_revision}` transforms. For more information, refer to ({kibana-pull}172224[#172224]).
 ====
 
-[discrete]
-.A new sub-feature privilege to control user access to the cases settings. (8.12)
-[%collapsible]
-====
-*Details* +
-Roles with at least a sub-feature privilege configured will not have access to the cases setting like they had previously. All roles without a sub-feature privilege configured will not be affected. For more information, refer to ({kibana-pull}170635[#170635]).
-====
+[float]
+==== Elastic Security solution
 
 [discrete]
-.Improved config output validation for default output. (8.11)
-[%collapsible]
-====
-*Details* +
-Improve config output validation to not allow to defining multiple default outputs in {kib} configuration. For more information, refer to ({kibana-pull}167085[#167085]).
-====
-
-[discrete]
-.Converted filterQuery to KQL.(8.11)
+[[breaking-161806]]
+.\[Defend\] Converted filterQuery to KQL.(8.11)
 [%collapsible]
 ====
 *Details* +
 Converts `filterQuery` to a KQL query string. For more information, refer to ({kibana-pull}161806[#161806]).
 ====
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 [discrete]
 .Moved doc_root.vulnerability.package to doc_root.package (ECS). (8.11)
@@ -116,6 +150,7 @@ This updates all instances of vulnerability.package to the ECS standard package 
 ====
 
 [discrete]
+[[breaking-162665]]
 .Introduced new summary search capabilities that will cause SLOs created before 8.10 to stop working. (8.10)
 [%collapsible]
 ====
@@ -192,6 +227,7 @@ DELETE .slo-observability.sli-v1*
 ====
 
 [discrete]
+[[breaking-162506]]
 .Get case metrics APIs became internal. (8.10)
 [%collapsible]
 ====
@@ -200,6 +236,7 @@ The get case metrics APIs are now internal. For more information, refer to ({kib
 ====
 
 [discrete]
+[[breaking-162492]]
 .New case limits. (8.10)
 [%collapsible]
 ====
@@ -221,6 +258,7 @@ For the full list, refer to {kib-issue}146945[#146945].
 ====
 
 [discrete]
+[[breaking-159041]]
 .The `addProcessorDefinition` function was removed. (8.10)
 [%collapsible]
 ====
@@ -229,6 +267,7 @@ The function `addProcessorDefinition` is removed from the Console plugin start c
 ====
 
 [discrete]
+[[breaking-162288]]
 .The Download CSV endpoint has changed. (8.10)
 [%collapsible]
 ====
@@ -238,6 +277,7 @@ The API endpoint for downloading a CSV file from a saved search in the Dashboard
 ====
 
 [discrete]
+[[breaking-159118]]
 .Uptime app now hidden when no data is available. (8.9)
 [%collapsible]
 ====
@@ -247,6 +287,7 @@ For synthetic monitoring, we now recommend to use the new Synthetics app. For mo
 ====
 
 [discrete]
+[[breaking-159012]]
 .Removed synthetics pattern from Uptime settings. (8.9)
 [%collapsible]
 ====
@@ -255,6 +296,7 @@ Data from browser monitors and monitors of all types created within the Syntheti
 ====
 
 [discrete]
+[[breaking-155470]]
 .Removed legacy project monitor API. (8.8)
 [%collapsible]
 ====
@@ -266,7 +308,7 @@ In 8.8.0 and later, an error appears when you use the project monitor API.
 ====
 
 [discrete]
-
+[[breaking-147985]]
 .Changed privileges for alerts and cases. (8.8)
 [%collapsible]
 ====
@@ -278,6 +320,7 @@ To attach alerts to cases, you must have `Read` access to an {observability} or 
 ====
 
 [discrete]
+[[breaking-149482]]
 .Removed the fields list sampling setting. (8.7)
 [%collapsible]
 ====
@@ -289,6 +332,7 @@ In 8.1.0 and later, {kib} uses the field caps API, by default, to determine the 
 ====
 
 [discrete]
+[[breaking-146990]]
 .Removed legacy pie chart visualization setting. (8.7)
 [%collapsible]
 ====
@@ -300,6 +344,7 @@ In 7.14.0 and later, the new aggregation-based pie chart visualization is availa
 ====
 
 [discrete]
+[[breaking-147616]]
 .Removed the `current_upgrades` endpoint. (8.7)
 [%collapsible]
 ====
@@ -311,6 +356,7 @@ When you upgrade to 8.7.0, use the `/action_status` endpoint.
 ====
 
 [discrete]
+[[breaking-147199]]
 .Removed the `preconfiguration` API route. (8.7)
 [%collapsible]
 ====
@@ -322,6 +368,7 @@ Do not use `/api/fleet/setup/preconfiguration`. To manage preconfigured agent po
 ====
 
 [discrete]
+[[breaking-143081]]
 .Changed the `histogram:maxBars` default setting. (8.6)
 [%collapsible]
 ====
@@ -337,6 +384,7 @@ For each {kibana-ref}/xpack-spaces.html[space], complete the following to change
 ====
 
 [discrete]
+[[breaking-158338]]
 .CSV reports now use PIT instead of Scroll. (8.6)
 [%collapsible]
 ====
@@ -348,6 +396,7 @@ To generate CSV reports, grant `read` privileges to the underlying indices.
 ====
 
 [discrete]
+[[breaking-141757]]
 .Updated bulk action API to return actionId instead of agent success. (8.5)
 [%collapsible]
 ====
@@ -359,6 +408,7 @@ When you use `FleetBulkResponse`, you now receive only `actionId` responses.
 ====
 
 [discrete]
+[[breaking-139431]]
 .Removed filter validation for ad-hoc data views (8.5)
 [%collapsible]
 ====
@@ -370,6 +420,7 @@ Filters associated with unknown data views now display a warning message instead
 ====
 
 [discrete]
+[[breaking-138677]]
 .Removed the `package_policies` field from the agent policy saved object. (8.5)
 [%collapsible]
 ====
@@ -381,6 +432,7 @@ The agent policy saved object no longer includes the `package_policies` field.
 ====
 
 [discrete]
+[[breaking-135669]]
 .xpack.agents.* are now uneditable in UI when defined in kibana.yml. (8.4)
 [%collapsible]
 ====
@@ -394,6 +446,7 @@ To configure `setxpack.fleet.agents.fleet_server.hosts` and `xpack.fleet.agents.
 ====
 
 [discrete]
+[[breaking-134336]]
 .Removed the legacy Timelion charts library. (8.4)
 [%collapsible]
 ====
@@ -407,6 +460,7 @@ In 8.4.0 and later, you are unable to configure the *Timelion* legacy charts lib
 ====
 
 [discrete]
+[[breaking-129581]]
 .Removed Quandl and Graphite integrations. (8.3)
 [%collapsible]
 ====
@@ -420,6 +474,7 @@ To leave your feedback about the removal of `.quandl` and `.graphite`, go to the
 ====
 
 [discrete]
+[[breaking-134855]]
 ."All" base privilege option now also applies to Osquery. (8.3)
 [%collapsible]
 ====
@@ -431,6 +486,7 @@ This impacts user roles that have *Privileges for all features* set to *All*. Af
 ====
 
 [discrete]
+[[breaking-121435]]
 .Removed legacy CSV export type. (8.1)
 [%collapsible]
 ====
@@ -442,6 +498,7 @@ If you are using 7.13.0 and earlier, {kibana-ref-all}/8.1/automating-report-gene
 ====
 
 [discrete]
+[[breaking-121369]]
 .Removed legacy PDF shim. (8.1)
 [%collapsible]
 ====
@@ -453,6 +510,7 @@ The POST URLs that you generated in {kib} 6.2.0 no longer work. For more informa
 ====
 
 [discrete]
+[[breaking-123754]]
 .Removed the `console.ssl` setting. (8.0)
 [%collapsible]
 ====
@@ -472,6 +530,832 @@ The `monitoring.cluster_alerts.allowedSpaces` setting, which {kib} uses to creat
 
 *Impact* +
 Before you upgrade to 8.0.0, remove `monitoring.cluster_alerts.allowedSpaces` from kibana.yml.
+====
+
+[discrete]
+[[breaking-122722]]
+.Removed the ability to use `elasticsearch.username: elastic` in production. (8.0)
+[%collapsible]
+====
+*Details* +
+In production, you are no longer able to use the `elastic` superuser to authenticate to {es}. For more information, refer to {kibana-pull}122722[#122722].
+
+*Impact* +
+When you configure `elasticsearch.username: elastic`, {kib} fails.
+====
+
+[discrete]
+[[breaking-118854]]
+.Split package policy `upgrade` endpoint for Fleet. (8.0)
+[%collapsible]
+====
+*Details* +
+For package policy upgrades, the packagePolicy `upgrade` endpoint format supports a mutative upgrade operation (when `dryRun: false`) and a read-only dry run operation (when `dryRun: true`):
+
+[source,text]
+--
+ POST /package_policies/upgrade
+ {
+   packagePolicyIds: [...],
+   dryRun: false
+ }
+--
+
+For more information, refer to {kibana-pull}118854[#118854].
+
+*Impact* +
+The endpoint is now split into two separate endpoints:
+
+[source,text]
+--
+ POST /package_policies/upgrade
+ {
+   packagePolicyIds: [...]
+ }
+
+ POST /package_policies/upgrade/dry_run
+ {
+   packagePolicyIds: [...]
+ }
+--
+====
+
+[discrete]
+[[breaking-119945]]
+.Removed APM jobs from Machine Learning. (8.0)
+[%collapsible]
+====
+*Details* +
+APM Node.js and RUM JavaScript anomaly detection job modules have been removed. For more information, refer to {kibana-pull}119945[#119945].
+
+*Impact* +
+When you upgrade to 8.0.0, you are unable to create and view the APM Node.js and RUM JavaScript jobs in Machine Learning.
+====
+
+[discrete]
+[[breaking-118300]]
+.Fail migrations for unknown types. (8.0)
+[%collapsible]
+====
+*Details* +
+Unknown saved object types now cause {kib} migrations to fail. For more information, refer to {kibana-issue}107678[#107678].
+
+*Impact* +
+To complete the migration, re enable plugins or delete documents from the index in the previous version.
+====
+
+[discrete]
+[[breaking-116821]]
+.Removed deprecated config fields from Logs and Metrics APIs and saved objects. (8.0)
+[%collapsible]
+====
+*Details* +
+On the Logs and Metrics UIs, references to the following API and saved object deprecated fields have been removed:
+
+* `timestamp`
+* `tiebreaker`
+* `container`
+* `pod`
+* `host`
+
+For more information, refer to {kibana-pull}116821[#116821] and {kibana-pull}115874[#115874].
+
+*Impact* +
+When you upgrade to 8.0.0, you are unable to use references to the deprecated fields.
+====
+
+[float]
+==== Alerting
+
+[discrete]
+[[breaking-114558]]
+.Removes `xpack.task_manager.index`
+[%collapsible]
+====
+*Details* +
+The `xpack.task_manager.index` setting has been removed. For more information, refer to {kibana-pull}114558[#114558].
+
+*Impact* +
+Before you upgrade to 8.0.0, remove `xpack.task_manager.index` from kibana.yml.
+====
+
+[discrete]
+[[breaking-113461]]
+.Removes ability to remove plugins
+[%collapsible]
+====
+*Details* +
+The `xpack.actions.enabled` setting has been removed. For more information, refer to {kibana-pull}113461[#113461].
+
+*Impact* +
+Before you upgrade to 8.0.0, remove `xpack.actions.enabled` from kibana.yml.
+====
+
+[float]
+==== Lens & visualizations
+
+[discrete]
+[[breaking-113516]]
+.Removes display options from legacy gauge
+[%collapsible]
+====
+*Details* +
+The *Display warnings* option has been removed from the aggregation-based gauge visualization. For more information, refer to {kibana-pull}113516[#113516].
+
+*Impact* +
+When you create aggregation-based gauge visualizations, the *Display warnings* option is no longer available in *Options > Labels*.
+====
+
+[discrete]
+[[breaking-112643]]
+.Removes settings from visEditors plugins
+[%collapsible]
+====
+*Details* +
+The following deprecated visEditors plugin settings have been removed:
+
+* `metric_vis.enabled`
+* `table_vis.enabled`
+* `tagcloud.enabled`
+* `metrics.enabled`
+* `metrics.chartResolution`
+* `chartResolution`
+* `metrics.minimumBucketSize`
+* `minimumBucketSize`
+* `vega.enabled`
+* `vega.enableExternalUrls`
+* `vis_type_table.legacyVisEnabled`
+* `timelion_vis.enabled`
+* `timelion.enabled`
+* `timelion.graphiteUrls`
+* `timelion.ui.enabled`
+
+For more information, refer to {kibana-pull}112643[#112643].
+
+*Impact* +
+Before you upgrade, make the following changes in kibana.yml:
+
+* Replace `metric_vis.enabled` with `vis_type_metric.enabled`
+* Replace `table_vis.enabled` with `vis_type_table.enabled`
+* Replace `tagcloud.enabled` with `vis_type_tagcloud.enabled`
+* Replace `metrics.enabled` with `vis_type_timeseries.enabled`
+* Replace `metrics.chartResolution` and `chartResolution` with `vis_type_timeseries.chartResolution`
+* Replace `metrics.minimumBucketSize` and `minimumBucketSize` with `vis_type_timeseries.minimumBucketSize`
+* Replace `vega.enabled` with `vis_type_vega.enabled`
+* Replace `vega.enableExternalUrls` with `vis_type_vega.enableExternalUrls`
+* Remove `vis_type_table.legacyVisEnabled`
+* Replace `timelion_vis.enabled` with `vis_type_timelion.enabled`
+* Replace `timelion.enabled` with `vis_type_timelion.enabled`
+* Replace `timelion.graphiteUrls` with `vis_type_timelion.graphiteUrls`
+* Remove `timelion.ui.enabled`
+
+====
+
+[discrete]
+[[breaking-111704]]
+.Removes dimming opacity setting
+[%collapsible]
+====
+*Details* +
+The *Dimming opacity* setting in *Advanced Settings* has been removed. For more information, refer to {kibana-pull}111704[#111704].
+
+*Impact* +
+When you upgrade to 8.0.0, you are no longer able to configure the dimming opactiy for visualizations.
+====
+
+[discrete]
+[[breaking-110985]]
+.Removes Less stylesheet support
+[%collapsible]
+====
+*Details* +
+In *TSVB*, custom Less stylesheets have been removed. For more information, refer to {kibana-pull}110985[#110985].
+
+*Impact* +
+Existing less stylesheets are automatically converted to CSS stylesheets.
+====
+
+[discrete]
+[[breaking-110571]]
+.Disables the input string mode
+[%collapsible]
+====
+*Details* +
+In *TSVB*, the *Index pattern selection mode* option has been removed. For more information, refer to {kibana-pull}110571[#110571].
+
+*Impact* +
+To use index patterns and {es} indices in *TSVB* visualizations:
+
+. Open the main menu, then click *Stack Management > Advanced Settings*.
+
+. Select *Allow string indices in TSVB*.
+
+. Click *Save changes*.
+====
+
+[float]
+==== Logs
+
+[discrete]
+[[breaking-115974]]
+.Removes deprecated alias config entries
+[%collapsible]
+====
+*Details* +
+The deprecated `xpack.infra.sources.default.logAlias` and `xpack.infra.sources.default.logAlias` settings have been removed. For more information, refer to {kibana-pull}115974[#115974].
+
+*Impact* +
+Before you upgrade, remove the settings from kibana.yml, then configure the settings in <<logs-app,Logs>>.
+====
+
+[discrete]
+[[breaking-61302]]
+.Removes configurable fields in settings
+[%collapsible]
+====
+*Details* +
+The *Logs* and *Metrics* configurable fields settings have been removed. For more information, refer to {kibana-pull}61302[#61302].
+
+*Impact* +
+Configure the settings in https://www.elastic.co/guide/en/ecs/current/ecs-reference.html[ECS].
+====
+
+[float]
+==== Machine learning
+
+[discrete]
+[[breaking-115444]]
+.Grants access to machine learning features when base privileges are used
+[%collapsible]
+====
+*Details* +
+Machine learning features are included as base privileges. For more information, refer to {kibana-pull}115444[#115444].
+
+*Impact* +
+If you do not want to grant users privileges to machine learning features, update <<xpack-security,*Users* and *Roles*>>.
+====
+
+[float]
+==== Maps
+
+[discrete]
+[[breaking-116184]]
+.Removes proxyElasticMapsServiceInMaps
+[%collapsible]
+====
+*Details* +
+The `map.proxyElasticMapsServiceInMaps` setting has been removed. For more information, refer to {kibana-pull}116184[#116184].
+
+*Impact* +
+Install the on-prem version of the <<maps-connect-to-ems,Elastic Maps Service>>, which is a Docker service that resides in the Elastic Docker registry, in an accessible location on your internal network. When you complete the installation, update kibana.yml to point to the service.
+====
+
+[float]
+==== Operations
+
+[discrete]
+[[breaking-111535]]
+.Removes environment variables
+[%collapsible]
+====
+*Details* +
+The `CONFIG_PATH` and `DATA_PATH` environment variables have been removed. For more information, refer to {kibana-pull}111535[#111535].
+
+*Impact* +
+Replace the `CONFIG_PATH` environment variable with `KBN_PATH_CONF`, and replace `DATA_PATH` with the `path.data` setting.
+====
+
+[float]
+==== Platform
+
+[discrete]
+[[breaking-114379]]
+.Removes supports for csp.rules configuration
+[%collapsible]
+====
+*Details* +
+Support for the `csp.rules` configuration property has been removed. For more information, refer to {kibana-pull}114379[#114379].
+
+*Impact* +
+Configuring the default `csp.script_src`, `csp.workers_src`, and `csp.style_src` values is not required.
+====
+
+[discrete]
+[[breaking-113653]]
+.Changes and removes deprecated core settings and deprecated settings from core plugins
+[%collapsible]
+====
+*Details* +
+The deprecation notice for `server.cors` has changed from `level:critical` to `level:warning`.
+
+The following settings have changed:
+
+* The `xpack.banners.placement` value has been renamed
+* The `newsfeed.defaultLanguage` newsfeed item retrieval method and default language has changed
+
+Support for the following configuration settings has been removed:
+
+* `newsfeed.defaultLanguage`
+* `cpu.cgroup.path.override`
+* `cpuacct.cgroup.path.override`
+* `server.xsrf.whitelist`
+* `xpack.xpack_main.xpack_api_polling_frequency_millis`
+* `KIBANA_PATH_CONF`
+
+For more information, refer to {kibana-pull}113653[#113653].
+
+*Impact* +
+* The `header` value provided to the `xpack.banners.placement` configuration has been renamed to 'top'
+* The `newsfeed.defaultLanguage` newsfeed items are retrieved based on the browser locale and default to English
+* Replace `cpu.cgroup.path.override` with `ops.cGroupOverrides.cpuPath`
+* Replace `cpuacct.cgroup.path.override` with `ops.cGroupOverrides.cpuAcctPath`
+* Replace `server.xsrf.whitelist` with `server.xsrf.allowlist`
+* Replace `xpack.xpack_main.xpack_api_polling_frequency_millis` with `xpack.licensing.api_polling_frequency`
+* Replace `KIBANA_PATH_CONF` path to the {kib} configuration file using the `KBN_PATH_CONF` environment variable
+====
+
+[discrete]
+[[breaking-113495]]
+.Removes `enabled` settings from plugins
+[%collapsible]
+====
+*Details* +
+Using `{plugin_name}.enabled` to disable plugins has been removed. Some plugins, such as `telemetry`, `newsfeed`, `reporting`, and the various `vis_type` plugins will continue to support this setting. All other {kib} plugins will not support this setting. Any new plugin will support this setting only when specified in the `configSchema`. For more information, refer to {kibana-pull}113495[#113495].
+
+The `xpack.security.enabled` setting has been removed. For more information, refer to {kibana-pull}111681[#111681].
+
+*Impact* +
+Before you upgrade to 8.0.0:
+
+* Remove `{plugin_name}.enabled` from kibana.yml. If you use the setting to control user access to {kib} applications, use <<tutorial-secure-access-to-kibana,*Features* controls>> instead.
+* Replace `xpack.security.enabled` with {ref}/security-settings.html#general-security-settings[`xpack.security.enabled`] in elasticsearch.yml.
+====
+
+[discrete]
+[[breaking-113367]]
+.Removes `--plugin-dir` cli option
+[%collapsible]
+====
+*Details* +
+The `plugins.scanDirs` setting and `--plugin-dir` cli option have been removed. For more information, refer to {kibana-pull}113367[#113367].
+
+*Impact* +
+Before you upgrade to 8.0.0, remove `plugins.scanDirs` from kibana.yml.
+====
+
+[discrete]
+[[breaking-113296]]
+.Removes support for `optimize.*` settings
+[%collapsible]
+====
+*Details* +
+The legacy `optimize.*` settings have been removed. If your configuration uses the following legacy `optimize.*` settings, {kib} fails to start:
+
+* `optimize.lazy`
+* `optimize.lazyPort`
+* `optimize.lazyHost`
+* `optimize.lazyPrebuild`
+* `optimize.lazyProxyTimeout`
+* `optimize.enabled`
+* `optimize.bundleFilter`
+* `optimize.bundleDir`
+* `optimize.viewCaching`
+* `optimize.watch`
+* `optimize.watchPort`
+* `optimize.watchHost`
+* `optimize.watchPrebuild`
+* `optimize.watchProxyTimeout`
+* `optimize.useBundleCache`
+* `optimize.sourceMaps`
+* `optimize.workers`
+* `optimize.profile`
+* `optimize.validateSyntaxOfNodeModules`
+
+For more information, refer to {kibana-pull}113296[#113296].
+
+*Impact* +
+To run the `@kbn/optimizer` separately in development, pass `--no-optimizer` to `yarn start`. For more details, refer to {kibana-pull}73154[#73154].
+====
+
+[discrete]
+[[breaking-113173]]
+.Removes `so/server/es` settings
+[%collapsible]
+====
+*Details* +
+Some of the `so/server/es` settings have been removed. If your configuration uses the following settings, {kib} fails to start:
+
+* `savedObjects.indexCheckTimeout`
+* `server.xsrf.token`
+* `elasticsearch.preserveHost`
+* `elasticsearch.startupTimeout`
+
+For more information, refer to {kibana-pull}113173[#113173].
+
+*Impact* +
+Before you upgrade to 8.0.0., remove these settings from kibana.yml.
+====
+
+[discrete]
+[[breaking-113068]]
+.Adds requirement for inline scripting
+[%collapsible]
+====
+*Details* +
+To start {kib}, you must enable inline scripting in {es}. For more information, refer to {kibana-pull}113068[#113068].
+
+*Impact* +
+Enable {ref}/modules-scripting-security.html[inline scripting].
+====
+
+[discrete]
+[[breaking-112773]]
+.Removes `kibana.index` settings
+[%collapsible]
+====
+*Details* +
+The `kibana.index`, `xpack.reporting.index`, and `xpack.task_manager.index` settings have been removed. For more information, refer to {kibana-pull}112773[#112773].
+
+*Impact* +
+Use spaces, cross-cluster replication, or cross-cluster search. To migrate to <<xpack-spaces,spaces>>, export your <<managing-saved-objects, saved objects>> from a tenant into the default space. For more details, refer to link:https://github.com/elastic/kibana/issues/82020[#82020].
+====
+
+[discrete]
+[[breaking-112305]]
+.Removes legacy logging
+[%collapsible]
+====
+*Details* +
+The logging configuration and log output format has changed. For more information, refer to {kibana-pull}112305[#112305].
+
+*Impact* +
+Use the new <<logging-configuration,logging system configuration>>.
+====
+
+[float]
+==== Reporting
+
+[discrete]
+[[breaking-114216]]
+.Removes reporting settings
+[%collapsible]
+====
+*Details* +
+The following settings have been removed:
+
+* `xpack.reporting.capture.concurrency`
+
+* `xpack.reporting.capture.settleTime`
+
+* `xpack.reporting.capture.timeout`
+
+* `xpack.reporting.kibanaApp`
+
+For more information, refer to {kibana-pull}114216[#114216].
+
+*Impact* +
+Before you upgrade to 8.0.0, remove the settings from kibana.yml.
+====
+
+[float]
+==== REST API
+
+[discrete]
+[[breaking-114730]]
+.Removes `/api/settings`
+[%collapsible]
+====
+*Details* +
+The `/api/settings` REST API has been removed. For more information, refer to {kibana-pull}114730[#114730].
+
+*Impact* +
+Use `/api/stats`.
+====
+
+[float]
+==== Security
+
+[discrete]
+[[breaking-116191]]
+.Removes legacy audit logger
+[%collapsible]
+====
+*Details* +
+The legacy audit logger has been removed. For more information, refer to {kibana-pull}116191[#116191].
+
+*Impact* +
+Audit logs will be written to the default location in the new ECS format. To change the output file, filter events, and more, use the <<audit-logging-settings, audit logging settings>>.
+====
+
+[discrete]
+[[breaking-110830]]
+.Changes the `GET /api/status` default behavior
+[%collapsible]
+====
+*Details* +
+`GET /api/status` reports a new and more verbose payload. For more information, refer to {kibana-pull}110830[#110830].
+
+*Impact* +
+To retrieve the {kib} status in the previous format, use `GET /api/status?v7format=true`.
+====
+
+[discrete]
+[[breaking-110738]]
+.Removes support for legacy exports
+[%collapsible]
+====
+*Details* +
+In {kib} 8.0.0 and later, the legacy format from {kib} 6.x is unsupported. For more information, refer to {kibana-pull}110738[#110738]
+
+*Impact* +
+Using the user interface to import saved objects is restricted to `.ndjson` format imports.
+====
+
+[discrete]
+[[breaking-109896]]
+.Removes `map.regionmap.*`
+[%collapsible]
+====
+*Details* +
+The deprecated `map.regionmap.*` setting in kibana.yml has been removed. For more information, refer to {kibana-pull}109896[#109896].
+
+*Impact* +
+If you have maps that use `map.regionmap` layers:
+
+. Remove the `map.regionmap` layer.
+
+. To recreate the choropleth layer, use <<import-geospatial-data,GeoJSON upload>> to index your static vector data into {es}.
+
+. Create a choropleth layer from the indexed vector data.
+====
+
+[discrete]
+[[breaking-109798]]
+.Removes `kibana.defaultAppId`
+[%collapsible]
+====
+*Details* +
+The deprecated `kibana.defaultAppId` setting in kibana.yml, which is also available as `kibana_legacy.defaultAppId`, has been removed. For more information, refer to {kibana-pull}109798[#109798].
+
+*Impact* +
+When you upgrade, remove `kibana.defaultAppId` from your kibana.yml file. To configure the default route for users when they enter a space, use the <<defaultroute,`defaultRoute`>> in *Advanced Settings*.
+====
+
+[discrete]
+[[breaking-109350]]
+.Removes `courier:batchSearches`
+[%collapsible]
+====
+*Details* +
+The deprecated `courier:batchSearches` setting in *Advanced Settings* has been removed. For more information, refer to {kibana-pull}109350[#109350].
+
+*Impact* +
+When you upgrade, the `courier:batchSearches` setting will no longer be available.
+====
+
+[discrete]
+[[breaking-108111]]
+.Removes `xpack.task_manager.index`
+[%collapsible]
+====
+*Details* +
+The deprecated `xpack.task_manager.index` setting in kibana.yml has been removed. For more information, refer to {kibana-pull}108111[#108111].
+
+*Impact* +
+When you upgrade, remove `xpack.task_manager.index` from your kibana.yml file.
+====
+
+[discrete]
+[[breaking-108103]]
+.Removes dashboard-only mode
+[%collapsible]
+====
+*Details* +
+The legacy dashboard-only mode has been removed. For more information, refer to {kibana-pull}108103[#108103].
+
+*Impact* +
+To grant users access to only dashboards, create a new role, then assign only the *Dashboard* feature privilege. For more information, refer to <<kibana-feature-privileges,{kib} privileges>>.
+====
+
+[discrete]
+[[breaking-105979]]
+.Removes `xpack.maps.showMapVisualizationTypes`
+[%collapsible]
+====
+*Details* +
+The deprecated `xpack.maps.showMapVisualizationTypes` setting in kibana.yml has been removed. For more information, refer to {kibana-pull}105979[#105979]
+
+*Impact* +
+When you upgrade, remove `xpack.maps.showMapVisualizationTypes` from your kibana.yml file.
+====
+
+[float]
+==== Enterprise Search changes
+
+[discrete]
+[[breaking-106307]]
+.Required security plugin in 8.0
+[%collapsible]
+====
+*Details* +
+Enterprise Search now requires that you enable X-Pack Security. For more information, refer to {kibana-pull}106307[#106307]
+
+*Impact* +
+Enable X-Pack Security.
+====
+
+[float]
+==== Index pattern changes
+
+[discrete]
+[[breaking-35173]]
+.Removed support for time-based interval index patterns
+[%collapsible]
+====
+*Details* +
+Time-based interval index patterns were deprecated in 5.x. In 6.x, you could no longer create time-based interval index patterns, but they continued to function as expected. Support for these index patterns has been removed in 8.0. For more information, refer to {kibana-pull}35173[#35173]
+
+*Impact* +
+You must migrate your time_based index patterns to a wildcard pattern. For example, logstash-*.
+====
+
+[float]
+==== Operations changes
+
+[discrete]
+[[breaking-93835]]
+.Removed platform from archive root directory
+[%collapsible]
+====
+*Details* +
+After you extract an archive, the output directory no longer includes the target platform. For example, `kibana-8.0.0-linux-aarch64.tar.gz` produces a `kibana-8.0.0` folder. For more information, refer to {kibana-pull}93835[#93835].
+
+*Impact* +
+To use the new folder, update the configuration management tools and automation.
+====
+
+[discrete]
+[[breaking-90511]]
+.Removed default support for TLS v1.0 and v1.1
+[%collapsible]
+====
+*Details* +
+The default support for TLS v1.0 and v1.1 has been removed. For more information, refer to {kibana-pull}90511[#90511].
+
+*Impact* +
+To enable support, set `--tls-min-1.0` in the `node.options` configuration file. To locate the configuration file, go to the kibana/config folder or any other configuration with the `KBN_PATH_CONF` environment variable. For example, if you are using a Debian-based system, the configuration file is located in /etc/kibana.
+====
+
+[discrete]
+[[breaking-74424]]
+.Removed support for sysv init
+[%collapsible]
+====
+*Details* +
+All supported operating systems use systemd service files. Any system that doesn’t have `service` aliased to use kibana.service should use `systemctl start kibana.service` instead of `service start kibana`. For more information, refer to {kibana-pull}74424[#74424].
+
+*Impact* +
+If your installation uses .deb or .rpm packages with SysV, migrate to systemd.
+====
+
+[discrete]
+[[breaking-42353]]
+.Disabled response logging as a default
+[%collapsible]
+====
+*Details* +
+In previous versions, all events are logged in `json` when `logging.json:true`. With the new logging configuration, you can choose the `json` and pattern output formats with layouts. For more information, refer to {kibana-pull}42353[#42353].
+
+*Impact* +
+To restore the previous behavior, configure the logging format for each custom appender with the `appender.layout property` in kibana.yml. There is no default for custom appenders, and each appender must be configured explicitly.
+
+[source,yaml]
+----
+logging:
+    appenders:
+        custom_console:
+            type: console
+        layout:
+            type: pattern
+        custom_json:
+            type: console
+        layout:
+            type: json
+    loggers:
+        - name: plugins.myPlugin
+          appenders: [custom_console]
+    root:
+        appenders: [default, custom_json]
+        level: warn
+----
+====
+
+[float]
+==== Reporting changes
+
+[discrete]
+[[breaking-52539]]
+.Legacy job parameters are no longer supported
+[%collapsible]
+====
+*Details* +
+*Reporting* is no longer compatible with POST URL snippets generated with {kib} 6.2.0 and earlier. For more information, refer to {kibana-pull}52539[#52539]
+
+*Impact* +
+If you use POST URL snippets to automatically generate PDF reports, regenerate the POST URL strings.
+====
+
+[float]
+==== Security changes
+
+[discrete]
+[[breaking-47929]]
+.Removed `/api/security/v1/saml` route
+[%collapsible]
+====
+*Details* +
+The `/api/security/v1/saml` route has been removed and is reflected in the kibana.yml `server.xsrf.whitelist` setting, {es}, and the Identity Provider SAML settings. For more information, refer to {kibana-pull}47929[#47929]
+
+*Impact* +
+Use the `/api/security/saml/callback` route, or wait to upgrade to 8.0.0-alpha2 when the `/api/security/saml/callback` route breaking change is reverted.
+====
+
+[discrete]
+[[breaking-41700]]
+.Reject legacy browsers by default
+[%collapsible]
+====
+*Details* +
+To provide the maximum level of protection for most installations, the csp.strict config is now enabled by default. Legacy browsers not supported by Kibana, such as Internet Explorer 11, are unable to access {kib} unless explicitly enabled. All browsers officially supported by Kibana do not have this issue. For more information, refer to {kibana-pull}41700[#41700]
+
+*Impact* +
+To enable support for legacy browsers, set `csp.strict: false` in kibana.yml. To effectively enforce the security protocol, we strongly discourage disabling `csp.strict` unless it is critical that you support Internet Explorer 11.
+====
+
+[float]
+==== Settings changes
+
+[discrete]
+[[breaking-106061]]
+.Use new session timeout defaults
+[%collapsible]
+====
+*Details* +
+The default values for the session timeout `xpack.security.session.{lifespan|idleTimeout}` settings have changed. For more information, refer to {kibana-pull}106061[#106061]
+
+*Impact* +
+Use the following default values:
+
+* `xpack.security.session.idleTimeout: 3d`
+* `xpack.security.session.lifespan: 30d`
+====
+
+[discrete]
+[[breaking-87114]]
+.Removed support for setting `server.host` to '0'
+[%collapsible]
+====
+*Details* +
+Support for configuring {kib} with `0` as the `server.host` has been removed. Please use `0.0.0.0` instead. For more information, refer to {kibana-pull}87114[#87114]
+
+*Impact* +
+You are now unable to use `0` as the `server.host`.
+====
+
+[discrete]
+[[breaking-38657]]
+.Removed `xpack.security.public` and `xpack.security.authProviders`
+[%collapsible]
+====
+*Details* +
+The `xpack.security.public` and `xpack.security.authProviders` settings have been removed. For more information, refer to {kibana-pull}38657[#38657]
+
+*Impact* +
+Use the `xpack.security.authc.saml.realm` and `xpack.security.authc.providers` settings.
+====
+
+[discrete]
+[[breaking-22696]]
+.Removed useUTC deprecation
+[%collapsible]
+====
+*Details* +
+The `logging.useUTC` setting has been removed. For more information, refer to {kibana-pull}22696[#22696]
+
+*Impact* +
+The default timezone is UTC. To change the timezone, set `logging.timezone: false` in kibana.yml. Change the timezone when the system, such as a docker container, is configured for a nonlocal timezone.
+====
+
+[discrete]
+[[breaking-32049]]
+.Removed environment variables `CONFIG_PATH` and `DATA_PATH`
+[%collapsible]
+====
+*Details* +
+The environment variables `CONFIG_PATH` and `DATA_PATH` have been removed.  For more information, refer to {kibana-pull}32049[#32049]
+
+*Impact* +
+Use the environment variable `KBN_PATH_CONF` instead of `CONFIG_PATH`.  Use the setting `path.data` instead of `DATA_PATH`.
 ====
 
 [float]
